--- a/tes_styles.css
+++ b/tes_styles.css
@@ -89,7 +89,7 @@ a:not(.button-link):hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 3rem;
 }
 
 .footer-link {
